--- a/git.html
+++ b/git.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="github">
+    <img src="imagens/1000155650.jpg" alt="github">
     <a href="https://github.com/joaoguilhermedias/" target="_blank">ACESSE</a>
 </body>
 </html>
