--- a/instagram.html
+++ b/instagram.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-        <img src="imagens/tela-instagram.jpg" alt="github">
+        <img src="imagens/1000155649.jpg" alt="github">
     <a href="https://instagram.com/jg.tzx/" target="_blank">ACESSE</a>
 </body>
 </html>
